--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,11 @@ name = "tetrs"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 macroquad = "0.4"
 priority-queue = "1.3.2"
 rand = "0.8.5"
+
+# uncomment for flamegraph generation
+[profile.release]
+debug = true
