--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-macroquad = "0.4"
+eframe = "0.26.2"
+egui = "0.26.2"
 priority-queue = "1.3.2"
 rand = "0.8.5"
 
